--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 	--accent-color: #caebdd;
 }
 
-h1, h2, h6, input, label {
+h1, h2, h3, h6, input, label {
 	font-family: 'Raleway', sans-serif;
 }
 
@@ -25,8 +25,15 @@ h1 {
 }
 
 h2 {
+	color: #1a1a1a;
 	font-weight: 700;
 	font-size: 50px;
+}
+
+h3 {
+	color: #1a1a1a;
+	font-weight: 200;
+	font-size: 30px;
 }
 
 h6 {
@@ -188,9 +195,53 @@ i[id^=chevron] {
 	background-color: green;
 }
 
-#cv-section {
-	background-color: yellow;
-}*/
+
+/***** CV SECTION *****/
+#cv {
+	height: unset;
+	padding-bottom: 15vh;
+}
+
+#cv-download-btn {
+	display: flex;
+	align-items: center;
+	width: unset;
+	margin-bottom: 5vh;
+}
+
+#cv-download-btn h3 {
+	font-size: 20px;
+	padding-right: 2vw;
+}
+
+#cv-download-btn i {
+	padding: 0 2vw;
+}
+
+#years {
+	width: 20vw;
+	border-right: solid 5px #1a1a1a;
+}
+
+.year {
+	padding: 5px;
+	background-color: #e5e5e5;
+	text-align: center;
+}
+
+.year:first-child {
+	border-top-left-radius: 10px;
+}
+
+.year:last-child {
+	border-bottom-left-radius: 10px;
+}
+
+.container {
+
+}
+
+
 
 
 /***** CONTACT SECTION *****/
@@ -259,6 +310,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
+	transform: scale(1.1);
 	background-color: #a6ddc6;
 	border-color: #1a1a1a
 }
