--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Raleway+Dots&family=Raleway:wght@100;200;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Raleway:wght@100;200;400;500;600;700&display=swap');
 
 html {
 	scroll-behavior: smooth;
@@ -207,6 +207,7 @@ i[id^=chevron] {
 	align-items: center;
 	width: unset;
 	margin-bottom: 5vh;
+	border-radius: 10px;
 }
 
 #cv-download-btn h3 {
