--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,11 @@ button {
 }
 
 .notransition {
-  -webkit-transition: none !important;
-  -moz-transition: none !important;
-  -o-transition: none !important;
-  transition: none !important;
+	-webkit-transition: none !important;
+	-ms-transition: none !important;
+	-moz-transition: none !important;
+	-o-transition: none !important;
+	transition: none !important;
 }
 
 /***** MENU *****/
@@ -90,6 +91,10 @@ button {
 	margin: 0vh 2vw;
 	padding: 3vh 0vw;
 	color: #a0a0a0;
+	-webkit-transition: color 0.2s ease;
+	-ms-transition: color 0.2s ease;
+	-moz-transition: color 0.2s ease;
+	-o-transition: color 0.2s ease;
 	transition: color 0.2s ease;
 }
 
@@ -102,6 +107,10 @@ button {
 	content: '';
 	width: 0;
 	border-bottom: 2px solid var(--accent-color);
+	-webkit-transition: width 0.2s ease;
+	-ms-transition: width 0.2s ease;
+	-moz-transition: width 0.2s ease;
+	-o-transition: width 0.2s ease;
 	transition: width 0.2s ease;
 }
 
@@ -114,6 +123,8 @@ button {
 	width: 100vw;
 	height: calc(7vh + 24px);
 }
+
+
 
 /***** MAIN/TITLE SECTION *****/
 #main {
@@ -137,7 +148,11 @@ button {
 	border-radius: 5px;
 	background-color: white;
 	cursor: pointer;
-	transition: all .2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 .icon:hover {
@@ -153,10 +168,18 @@ i {
 i[id^=chevron] {
 	position: relative;
 	color: var(--accent-color);
-	transition: 0.3s all ease-in;
+	-webkit-transition: all 0,3s ease-in;
+	-ms-transition: all 0,3s ease-in;
+	-moz-transition: all 0,3s ease-in;
+	-o-transition: all 0,3s ease-in;
+	transition: all 0,3s ease-in;
 }
 
 #chevron-3 {
+	-webkit-transform: translateY(18px) scale(0.5);
+	-ms-transform: translateY(18px) scale(0.5);
+	-moz-transform: translateY(18px) scale(0.5);
+	-o-transform: translateY(18px) scale(0.5);
 	transform: translateY(18px) scale(0.5);
 	opacity: 0;
 }
@@ -166,20 +189,36 @@ i[id^=chevron] {
 }
 
 #chevron-1 {
+	-webkit-transform: translateY(-18px);
+	-ms-transform: translateY(-18px);
+	-moz-transform: translateY(-18px);
+	-o-transform: translateY(-18px);
 	transform: translateY(-18px);
 }
 
 #scroll-down:hover #chevron-3 {
+	-webkit-transform: translateY(48px) scale(0.1);
+	-ms-transform: translateY(48px) scale(0.1);
+	-moz-transform: translateY(48px) scale(0.1);
+	-o-transform: translateY(48px) scale(0.1);
 	transform: translateY(48px) scale(1);
 	opacity: 0.5;
 }
 
 #scroll-down:hover #chevron-2 {
+	-webkit-transform: translateY(30px);
+	-ms-transform: translateY(30px);
+	-moz-transform: translateY(30px);
+	-o-transform: translateY(30px);
 	transform: translateY(30px);
 	opacity: 0;
 }
 
 #scroll-down:hover #chevron-1 {
+	-webkit-transform: translateY(-8px);
+	-ms-transform: translateY(-8px);
+	-moz-transform: translateY(-8px);
+	-o-transform: translateY(-8px);
 	transform: translateY(-8px);
 }
 
@@ -204,10 +243,16 @@ i[id^=chevron] {
 }
 
 
+
+
 /***** CV SECTION *****/
 #cv {
 	height: unset;
 	padding-bottom: 15vh;
+}
+
+#cv-options {
+	display: flex;
 }
 
 #cv-download-btn {
@@ -228,12 +273,91 @@ i[id^=chevron] {
 	padding: 0 2vw;
 }
 
+/* Custom checkboxes */
+.category-label {
+	display: block;
+	position: relative;
+	padding-left: 35px;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.category-label input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+}
+
+.checkmark {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 16px;
+	width: 16px;
+	background-color: #eee;
+}
+
+.category-label input:checked ~ .checkmark {
+	background-color: var(--accent-color);
+}
+
+.category-label:hover input ~ .checkmark {
+	background-color: #a6ddc6;
+}
+
+.checkmark:after {
+	content: "";
+	position: absolute;
+	display: none;
+}
+
+.category-label input:checked ~ .checkmark:after {
+	display: block;
+}
+
+.category-label .checkmark:after {
+	left: 5px;
+	top: 1px;
+	width: 4px;
+	height: 8px;
+	border: solid #1a1a1a;
+	border-width: 0 2px 2px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+
 #categories {
 	right: 0;
 	display: grid;
 	grid-column-gap: 5vw;
-	grid-row-gap: 5vh;
 	grid-template-columns: auto auto;
+	padding: 2vh 2vw;
+}
+
+.category-label, #expand-btn h3 {
+	font-weight: 400;
+	font-size: 16px;
+}
+
+#expand-btn {
+	left: 0;
+	display: flex;
+	align-items: center;
+	width: unset;
+	margin-bottom: 5vh;
+}
+
+#expand-btn i {
+	font-size: 16px;
+	padding: 0 10px;
 }
 
 #years {
@@ -247,13 +371,29 @@ i[id^=chevron] {
 
 .year {
 	float: left;
-	padding: 5px;
+	padding: 20px 5px;
 	width: 20%;
 	margin-right: 30px;
 	border-right: solid 5px #1a1a1a;
 	background-color: #e5e5e5;
 	text-align: center;
-	transition: padding 0.3s ease;
+	position: relative;
+	transition: height 0.3s ease !important;
+}
+
+.year h3 {
+	width: 100%;
+	position: absolute;
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
 .year-container:first-child .year {
@@ -267,7 +407,11 @@ i[id^=chevron] {
 .content {
 	float: right;
 	width: calc(80% - 15px);
-	height: 40px;
+	-webkit-transition: height 0.3s ease;
+	-ms-transition: height 0.3s ease;
+	-moz-transition: none height 0.3s ease;
+	-o-transition: none height 0.3s ease;
+	transition: height 0.3s ease;
 }
 
 .content p {
@@ -357,11 +501,15 @@ input[type=submit] {
 	white-space: normal;
 	text-transform: uppercase;
 	cursor: pointer;
+
+	-webkit-transition: all 0.2s ease;
+	-ms-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
 	transition: all 0.2s ease;
 }
 
 input[type=submit]:hover {
-	transform: scale(1.1);
 	background-color: #a6ddc6;
 	border-color: #1a1a1a
 }
