--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,7 @@
 
 input, textarea {
 	border: none;
-	caret-color: var(--accent-color);
+	caret-color: var(--accent-colour);
 }
 
 input {
@@ -58,7 +58,7 @@ input[type=submit] {
 	width: 100%;
 	border-radius: 5px;
 	border: 1px solid #666666;
-	background-color: var(--accent-color);
+	background-color: var(--accent-colour);
 	font-weight: 500;
 	white-space: normal;
 	text-transform: uppercase;
@@ -96,11 +96,11 @@ textarea {
 }
 
 input[id$=input]:focus {
-	border-bottom: 2px solid var(--accent-color);
+	border-bottom: 2px solid var(--accent-colour);
 }
 
 textarea:focus {
-	border: 2px solid var(--accent-color);
+	border: 2px solid var(--accent-colour);
 	width: calc(96% - 4px);
 }
 
