--- a/css/projects.css
+++ b/css/projects.css
@@ -1,14 +1,17 @@
 #projects-container {
 	display: grid;
-	grid-column-gap: 5vw;
-	grid-template-columns: auto auto;
-	padding: 2vh 2vw;
+	grid-column-gap: 5%;
+	grid-row-gap: 5vh;
+	grid-template-columns: 45% 45%;
+	padding: 2vh 2.5%;
 }
 
 .project {
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	border-radius: 10px;
+	position: relative;
+	/*padding: 2vh 2vw;*/
 
 	-webkit-transition: background-color 0.25s ease;
 	-ms-transition: background-color 0.25s ease;
@@ -18,6 +21,17 @@
 }
 
 .project:hover {
-	background-color: var(--accent-color);
+	background-color: var(--accent-colour);
 	cursor: pointer;
+}
+
+.web-project img {
+	width: 100%;
+	height: auto;
+	position: absolute;
+	bottom: 0;
+	margin-top: auto;
+	margin-bottom: 0;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
