--- a/css/main.css
+++ b/css/main.css
@@ -1,175 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Raleway:wght@100;200;400;500;600;700&display=swap');
-
-html {
-	scroll-behavior: smooth;
-}
-
-body {
-	margin: 0;
-	--accent-colour: #caebdd;
-}
-
-h1, h2, h3, h6, input, label {
-	font-family: 'Raleway', sans-serif;
-}
-
-p, textarea {
-	font-family: 'Lora', serif;
-}
-
-h1 {
-	margin: 0;
-	color: white;
-	font-size: 90px;
-	text-transform: uppercase;
-}
-
-h2 {
-	color: #1a1a1a;
-	font-weight: 700;
-	font-size: 50px;
-}
-
-h3 {
-	color: #1a1a1a;
-	font-weight: 200;
-	font-size: 30px;
-}
-
-h6 {
-	color: #a0a0a0;
-	font-size: 24px;
-	font-weight: 400;
-	text-transform: uppercase;
-}
-
-::selection {
-	background-color: var(--accent-colour);
-}
-
-h1::selection {
-	color: #1a1a1a;
-}
-
-a:link {
-	text-decoration: none;
-}
-
-button {
-	border: none;
-	background-color: unset;
-	cursor: pointer;
-}
-
-.section {
-	width: 90vw;
-	height: 90vh;
-	padding: 5vh 5vw;
-}
-
-.notransition {
-	-webkit-transition: none !important;
-	-ms-transition: none !important;
-	-moz-transition: none !important;
-	-o-transition: none !important;
-	transition: none !important;
-}
-
-/***** MENU *****/
-#menu {
-	position: absolute;
-	right: 0;
-	display: flex;
-	justify-content: flex-end;
-	width: 96vw;
-	padding: 2vh 2vw 0vh 2vw;
-	background-color: #1a1a1a;
-	z-index: 2;
-}
-
-.menu-text {
-	margin: 0vh 2vw;
-	padding: 3vh 0vw;
-	color: #a0a0a0;
-	-webkit-transition: color 0.2s ease;
-	-ms-transition: color 0.2s ease;
-	-moz-transition: color 0.2s ease;
-	-o-transition: color 0.2s ease;
-	transition: color 0.2s ease;
-}
-
-.menu-text:hover {
-	color: white;
-}
-
-.menu-text:after {
-	display: block;
-	content: '';
-	width: 0;
-	border-bottom: 2px solid var(--accent-colour);
-	-webkit-transition: width 0.2s ease;
-	-ms-transition: width 0.2s ease;
-	-moz-transition: width 0.2s ease;
-	-o-transition: width 0.2s ease;
-	transition: width 0.2s ease;
-}
-
-.menu-text:hover:after {
-	width: 100%;
-}
-
-#menu-sensor {
-	position: fixed;
-	width: 100vw;
-	height: calc(7vh + 24px);
-}
-
-#icons {
-	display: flex;
-	margin-top: 5vh;
-}
-
-.icon {
-	width: 50px;
-	padding: 15px 10px;
-	margin: 10px;
-	border-radius: 5px;
-	background-color: white;
-	cursor: pointer;
-	-webkit-transition: all 0.2s ease-in-out;
-	-ms-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-}
-
-.icon:hover {
-	transform: scale(1.1);
-	background-color: var(--accent-colour);
-}
-
-i {
-	color: #1a1a1a;
-	font-size: 40px;
-}
-
-@media screen and (max-width: 500px) {
-	/* Hamburger menu */
-	h1 {
-		font-size: 70px;
-	}
-}
-
-@media screen and (max-width: 400px) {
-	#icons {
-		display: grid;
-		grid-template-columns: auto auto;
-	}
-}
-
-
-
-/***** MAIN/TITLE SECTION *****/
 #main {
 	display: flex;
 	flex-direction: column;
@@ -179,6 +7,26 @@ i {
 	text-align: center;
 }
 
+#subtitle {
+	font-size: 45px;
+	font-weight: 400;
+}
+
+#subtitle::after {
+	content: "|";
+	margin-left: 0.05em;
+	font-weight: 700;
+	color: var(--accent-colour);
+	animation: caret 1s steps(1) infinite;
+}
+
+@keyframes caret {
+  50% {
+    color: transparent;
+  }
+}
+
+/** Scroll down icons/animation **/
 i[id^=chevron] {
 	position: relative;
 	color: var(--accent-colour);
@@ -189,7 +37,7 @@ i[id^=chevron] {
 	transition: all 0.25s ease-in;
 }
 
-#chevron-3 {
+#chevron-down-3 {
 	-webkit-transform: translateY(18px) scale(0.5);
 	-ms-transform: translateY(18px) scale(0.5);
 	-moz-transform: translateY(18px) scale(0.5);
@@ -198,11 +46,11 @@ i[id^=chevron] {
 	opacity: 0;
 }
 
-#chevron-2 {
+#chevron-down-2 {
 	opacity: 0.5;
 }
 
-#chevron-1 {
+#chevron-down-1 {
 	-webkit-transform: translateY(-18px);
 	-ms-transform: translateY(-18px);
 	-moz-transform: translateY(-18px);
@@ -210,16 +58,16 @@ i[id^=chevron] {
 	transform: translateY(-18px);
 }
 
-#scroll-down:hover #chevron-3 {
-	-webkit-transform: translateY(48px) scale(0.1);
-	-ms-transform: translateY(48px) scale(0.1);
-	-moz-transform: translateY(48px) scale(0.1);
-	-o-transform: translateY(48px) scale(0.1);
+#scroll-down:hover #chevron-down-3 {
+	-webkit-transform: translateY(48px) scale(1);
+	-ms-transform: translateY(48px) scale(1);
+	-moz-transform: translateY(48px) scale(1);
+	-o-transform: translateY(48px) scale(1);
 	transform: translateY(48px) scale(1);
 	opacity: 0.5;
 }
 
-#scroll-down:hover #chevron-2 {
+#scroll-down:hover #chevron-down-2 {
 	-webkit-transform: translateY(30px);
 	-ms-transform: translateY(30px);
 	-moz-transform: translateY(30px);
@@ -228,7 +76,7 @@ i[id^=chevron] {
 	opacity: 0;
 }
 
-#scroll-down:hover #chevron-1 {
+#scroll-down:hover #chevron-down-1 {
 	-webkit-transform: translateY(-8px);
 	-ms-transform: translateY(-8px);
 	-moz-transform: translateY(-8px);
