--- a/css/projects.css
+++ b/css/projects.css
@@ -1,17 +1,17 @@
+/*#projects {
+	height: auto;
+	position: relative;
+}*/
+
 #projects-container {
-	display: grid;
-	grid-column-gap: 5%;
-	grid-row-gap: 5vh;
-	grid-template-columns: 45% 45%;
-	padding: 2vh 2.5%;
+	position: absolute;
+	height: ;
+	width: calc(100% - 10vw - 190px);
+	left: calc(5vw + 95px);
 }
 
 .project {
-	width: 100%;
-	height: 300px;
-	border-radius: 10px;
-	position: relative;
-	/*padding: 2vh 2vw;*/
+	max-width: 100%;
 
 	-webkit-transition: background-color 0.25s ease;
 	-ms-transition: background-color 0.25s ease;
@@ -20,18 +20,121 @@
 	transition: background-color 0.25s ease;
 }
 
+#proj-main-img {
+	height: 45vh;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .project:hover {
 	background-color: var(--accent-colour);
 	cursor: pointer;
 }
 
-.web-project img {
-	width: 100%;
-	height: auto;
-	position: absolute;
-	bottom: 0;
-	margin-top: auto;
+.project h3 {
+	font-size: 24px;
 	margin-bottom: 0;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+}
+
+.project h4 {
+	margin-top:  10px;
+	margin-bottom: 20px;
+}
+
+
+/** Scroll right and left icons/animation **/
+#scroll-next, #scroll-prev {
+	position: absolute;
+	padding: 20vh 10px;
+}
+#scroll-next {
+	right: 4vw;
+}
+#scroll-prev {
+	left: 4vw;
+}
+
+#chevron-right-3, #chevron-left-1 {
+	-webkit-transform: scale(0.5);
+	-ms-transform: scale(0.5);
+	-moz-transform: scale(0.5);
+	-o-transform: scale(0.5);
+	transform: scale(0.5);
+	opacity: 0;
+}
+
+#chevron-right-3, #chevron-left-3 {
+	-webkit-transform: translateX(8px);
+	-ms-transform: translateX(8px);
+	-moz-transform: translateX(8px);
+	-o-transform: translateX(8px);
+	transform: translateX(8px);
+}
+
+#chevron-right-1, #chevron-left-1 {
+	-webkit-transform: translateX(-8px);
+	-ms-transform: translateX(-8px);
+	-moz-transform: translateX(-8px);
+	-o-transform: translateX(-8px);
+	transform: translateX(-8px);
+}
+
+#chevron-right-2, #chevron-left-2 {
+	opacity: 0.5;
+}
+
+#chevron-right-1, #chevron-left-3 {
+	opacity: 1;
+}
+
+#scroll-next:hover #chevron-right-3 {
+	-webkit-transform: translateX(46px) scale(1);
+	-ms-transform: translateX(46px) scale(1);
+	-moz-transform: translateX(46px) scale(1);
+	-o-transform: translateX(46px) scale(1);
+	transform: translateX(46px) scale(1);
+	opacity: 0.5;
+}
+
+#scroll-next:hover #chevron-right-2 {
+	-webkit-transform: translateX(30px);
+	-ms-transform: translateX(30px);
+	-moz-transform: translateX(30px);
+	-o-transform: translateX(30px);
+	transform: translateX(30px);
+	opacity: 0;
+}
+
+#scroll-next:hover #chevron-right-1 {
+	-webkit-transform: translateX(8px);
+	-ms-transform: translateX(8px);
+	-moz-transform: translateX(8px);
+	-o-transform: translateX(8px);
+	transform: translateX(8px);
+}
+
+#scroll-prev:hover #chevron-left-1 {
+	-webkit-transform: translateX(-46px) scale(1);
+	-ms-transform: translateX(-46px) scale(1);
+	-moz-transform: translateX(-46px) scale(1);
+	-o-transform: translateX(-46px) scale(1);
+	transform: translateX(-46px) scale(1);
+	opacity: 0.5;
+}
+
+#scroll-prev:hover #chevron-left-2 {
+	-webkit-transform: translateX(-30px);
+	-ms-transform: translateX(-30px);
+	-moz-transform: translateX(-30px);
+	-o-transform: translateX(-30px);
+	transform: translateX(-30px);
+	opacity: 0;
+}
+
+#scroll-prev:hover #chevron-left-3 {
+	-webkit-transform: translateX(-8px);
+	-ms-transform: translateX(-8px);
+	-moz-transform: translateX(-8px);
+	-o-transform: translateX(-8px);
+	transform: translateX(-8px);
 }
