--- a/css/contact.css
+++ b/css/contact.css
@@ -1,127 +1,131 @@
 #contact {
-	height: unset;
-	background-color: #1a1a1a;
+  height: unset;
+  background-color: #1a1a1a;
 }
 
 #contact h2 {
-	color: white;
+  color: white;
 }
 
 #contact h2::selection {
-	color: #1a1a1a;
+  color: #1a1a1a;
 }
 
 #contact-form {
-	width: 90%;
-	padding: 5vh 5%;
-	border-radius: 5px;
-	background-color: #e5e5e5;
+  width: 90%;
+  padding: 5vh 5%;
+  border-radius: 5px;
+  background-color: #e5e5e5;
 }
 
 #contact-form label {
-	float: left;
-	padding: 5px 0;
-	font-size: 30px;
-	font-weight: 200;
-	text-transform: uppercase;
+  float: left;
+  padding: 5px 0;
+  font-size: 30px;
+  font-weight: 200;
+  text-transform: uppercase;
 }
 
-input, textarea {
-	border: none;
-	caret-color: var(--accent-colour);
+input,
+textarea {
+  border: none;
+  caret-color: var(--accent-colour);
 }
 
 input {
-	padding: 8px 2%;
-	font-size: 24px;
-	font-weight: 200;
+  padding: 8px 2%;
+  font-size: 24px;
+  font-weight: 200;
 }
 
 .row {
-	width: 100%;
-	height: 40px;
-	margin-bottom: 1vh;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 1vh;
 }
 
 /* Used to center the 'send message' button in the screen */
 .center {
-	width: 300px;
-	margin: auto;
+  width: 300px;
+  margin: auto;
 }
 
-#name-input, #email-input {
-	float: right;
-	width: 80%;
+#name-input,
+#email-input {
+  float: right;
+  width: 80%;
 }
 
-input[type=submit] {
-	width: 100%;
-	border-radius: 5px;
-	border: 1px solid #1a1a1a;
-	background-color: var(--accent-colour);
-	font-weight: 500;
-	white-space: normal;
-	text-transform: uppercase;
-	cursor: pointer;
+input[type="submit"] {
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid #1a1a1a;
+  background-color: var(--accent-colour);
+  font-weight: 500;
+  white-space: normal;
+  text-transform: uppercase;
+  cursor: pointer;
 
-	-webkit-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-input[type=submit]:hover {
-	background-color: #1a1a1a;
-	color: white;
+input[type="submit"]:hover {
+  background-color: #1a1a1a;
+  color: white;
 }
 
 textarea {
-	width: 96%;
-	margin-bottom: 3vh;
-	padding: 2vh 2%;
-	font-size: 18px;
-	resize: vertical;
+  width: 96%;
+  margin-bottom: 3vh;
+  padding: 2vh 2%;
+  font-size: 18px;
+  resize: vertical;
 }
 
 #icon-container {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 5vh;
-	text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5vh;
+  text-align: center;
 }
 
 :focus {
-	outline: none;
+  outline: none;
 }
 
-input[id$=input]:focus {
-	border-bottom: 2px solid var(--accent-colour);
+input[id$="input"]:focus {
+  border-bottom: 2px solid var(--accent-colour);
 }
 
 textarea:focus {
-	border: 2px solid var(--accent-colour);
-	width: calc(96% - 4px);
+  border: 2px solid var(--accent-colour);
+  width: calc(96% - 4px);
 }
 
 @media screen and (max-width: 850px) {
-	/* When screen is narrower than 850px, reduce the width of the input fields so they don't overlap with the text */
-	#name-input, #email-input {
-		width: 70%;
-	}
+  /* When screen is narrower than 850px, reduce the width of the input fields so they don't overlap with the text */
+  #name-input,
+  #email-input {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 500px) {
-	/* When screen is narrower than 500px, put the input fields below their labels instead of in single rows */
-	.row {
-		height: 80px;
-	}
+  /* When screen is narrower than 500px, put the input fields below their labels instead of in single rows */
+  .row {
+    height: 80px;
+  }
 
-	.center {
-		width: 96%;
-	}
+  .center {
+    width: 96%;
+  }
 
-	#name-input, #email-input {
-		width: 96%;
-	}
+  #name-input,
+  #email-input {
+    width: 96%;
+  }
 }
