--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,23 @@
 #main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background-color: #1a1a1a;
-	text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1a1a1a;
+  text-align: center;
 }
 
 #subtitle {
-	font-size: 45px;
-	font-weight: 400;
+  font-size: 45px;
+  font-weight: 400;
 }
 
 #subtitle:not(.no-caret)::after {
-	content: "|";
-	margin-left: 0.05em;
-	font-weight: 700;
-	color: var(--accent-colour);
-	animation: caret 1s steps(1) infinite;
+  content: "|";
+  margin-left: 0.05em;
+  font-weight: 700;
+  color: var(--accent-colour);
+  animation: caret 1s steps(1) infinite;
 }
 
 @keyframes caret {
@@ -27,83 +27,79 @@
 }
 
 /** Scroll down icons/animation **/
-i[id^=chevron] {
-	position: relative;
-	color: var(--accent-colour);
-	-webkit-transition: all 0.25s ease-in;
-	-ms-transition: all 0.25s ease-in;
-	-moz-transition: all 0.25s ease-in;
-	-o-transition: all 0.25s ease-in;
-	transition: all 0.25s ease-in;
+i[id^="chevron"] {
+  position: relative;
+  color: var(--accent-colour);
+  -webkit-transition: all 0.25s ease-in;
+  -ms-transition: all 0.25s ease-in;
+  -moz-transition: all 0.25s ease-in;
+  -o-transition: all 0.25s ease-in;
+  transition: all 0.25s ease-in;
 }
 
 #chevron-down-3 {
-	-webkit-transform: translateY(18px) scale(0.5);
-	-ms-transform: translateY(18px) scale(0.5);
-	-moz-transform: translateY(18px) scale(0.5);
-	-o-transform: translateY(18px) scale(0.5);
-	transform: translateY(18px) scale(0.5);
-	opacity: 0;
+  -webkit-transform: translateY(18px) scale(0.5);
+  -ms-transform: translateY(18px) scale(0.5);
+  -moz-transform: translateY(18px) scale(0.5);
+  -o-transform: translateY(18px) scale(0.5);
+  transform: translateY(18px) scale(0.5);
+  opacity: 0;
 }
 
 #chevron-down-2 {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
 #chevron-down-1 {
-	-webkit-transform: translateY(-18px);
-	-ms-transform: translateY(-18px);
-	-moz-transform: translateY(-18px);
-	-o-transform: translateY(-18px);
-	transform: translateY(-18px);
+  -webkit-transform: translateY(-18px);
+  -ms-transform: translateY(-18px);
+  -moz-transform: translateY(-18px);
+  -o-transform: translateY(-18px);
+  transform: translateY(-18px);
 }
 
 #scroll-down:hover #chevron-down-3 {
-	-webkit-transform: translateY(48px) scale(1);
-	-ms-transform: translateY(48px) scale(1);
-	-moz-transform: translateY(48px) scale(1);
-	-o-transform: translateY(48px) scale(1);
-	transform: translateY(48px) scale(1);
-	opacity: 0.5;
+  -webkit-transform: translateY(48px) scale(1);
+  -ms-transform: translateY(48px) scale(1);
+  -moz-transform: translateY(48px) scale(1);
+  -o-transform: translateY(48px) scale(1);
+  transform: translateY(48px) scale(1);
+  opacity: 0.5;
 }
 
 #scroll-down:hover #chevron-down-2 {
-	-webkit-transform: translateY(30px);
-	-ms-transform: translateY(30px);
-	-moz-transform: translateY(30px);
-	-o-transform: translateY(30px);
-	transform: translateY(30px);
-	opacity: 0;
+  -webkit-transform: translateY(30px);
+  -ms-transform: translateY(30px);
+  -moz-transform: translateY(30px);
+  -o-transform: translateY(30px);
+  transform: translateY(30px);
+  opacity: 0;
 }
 
 #scroll-down:hover #chevron-down-1 {
-	-webkit-transform: translateY(-8px);
-	-ms-transform: translateY(-8px);
-	-moz-transform: translateY(-8px);
-	-o-transform: translateY(-8px);
-	transform: translateY(-8px);
+  -webkit-transform: translateY(-8px);
+  -ms-transform: translateY(-8px);
+  -moz-transform: translateY(-8px);
+  -o-transform: translateY(-8px);
+  transform: translateY(-8px);
 }
 
 #scroll-down {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	padding-bottom: 3vh;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding-bottom: 3vh;
 }
 
 #scroll-down div {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
-
 
 /** ABOUT SECTION **/
 .bio-container {
-	margin-top: 20px;
-	background: var(--accent-colour);
-	border-radius: 40px 0 40px 0;
-	height: 70vh;
+  margin-top: 20px;
+  background: var(--accent-colour);
+  border-radius: 40px 0 40px 0;
+  height: 70vh;
 }
-
-
-
