--- a/css/projects.css
+++ b/css/projects.css
@@ -1,161 +1,162 @@
-/*#projects {
-	height: auto;
-	position: relative;
-}*/
-
 #projects-container {
-	position: absolute;
-	width: calc(100% - 10vw - 190px);
-	left: calc(5vw + 95px);
+  position: absolute;
+  width: calc(100% - 10vw - 190px);
+  left: calc(5vw + 95px);
 }
 
 .project {
-	height: 55vh;
-	padding: 20px;
-	border-radius: 10px;
-	background-color: var(--accent-colour);
-	position: absolute;
-	left: 50%;
+  height: calc(27vw + 124px);
+  padding: 20px;
+  border-radius: 10px;
+  background-color: var(--accent-colour);
+  position: absolute;
+  left: 50%;
 
-	-webkit-transition: background-color, transform 0.25s ease;
-	-ms-transition: background-color, transform 0.25s ease;
-	-moz-transition: background-color, transform 0.25s ease;
-	-o-transition: background-color, transform 0.25s ease;
-	transition: background-color, transform 0.25s ease;
+  -webkit-transition: background-color, transform 0.25s ease;
+  -ms-transition: background-color, transform 0.25s ease;
+  -moz-transition: background-color, transform 0.25s ease;
+  -o-transition: background-color, transform 0.25s ease;
+  transition: background-color, transform 0.25s ease;
 }
 
 .proj-img-container {
-	height: 40vh;
-	width: 50vw;
-	display: flex;
-	align-items: center;
+  height: 27vw;
+  width: 50vw;
+  display: flex;
+  align-items: center;
 }
 
 .proj-img {
-	display: block;
-	max-height: 40vh;
-	max-width: 50vw;
-	margin: 0 auto 20px auto;
-	border-radius: 2px;
+  display: block;
+  max-height: 27vw;
+  max-width: 50vw;
+  margin: 0 auto 20px auto;
+  border-radius: 2px;
 }
 
 .project.main:hover {
-	transition: transform 0.2s;
-	transform: translateX(-50%) scale(1.05) !important;
-	cursor: pointer;
+  transition: transform 0.2s;
+  transform: translateX(-50%) scale(1.05) !important;
+  cursor: pointer;
 }
 
 .project h3 {
-	font-size: 24px;
-	margin-bottom: 0;
+  font-size: 24px;
+  margin-bottom: 0;
 }
 
 .project h4 {
-	margin-top:  10px;
-	margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 660px) {
-	.prev2, .next2 {
-		opacity: 0 !important;
-	}
+  .prev2,
+  .next2 {
+    opacity: 0 !important;
+  }
 }
-
 
 /** Next and prev chevron animations **/
-#scroll-next, #scroll-prev {
-	position: absolute;
-	padding: 20vh 10px;
-	z-index: 3;
+#scroll-next,
+#scroll-prev {
+  position: absolute;
+  padding: 20vh 10px;
+  z-index: 3;
 }
 #scroll-next {
-	right: 4vw;
+  right: 4vw;
 }
 #scroll-prev {
-	left: 4vw;
+  left: 4vw;
 }
 
-#chevron-right-3, #chevron-left-1 {
-	-webkit-transform: scale(0.5);
-	-ms-transform: scale(0.5);
-	-moz-transform: scale(0.5);
-	-o-transform: scale(0.5);
-	transform: scale(0.5);
-	opacity: 0;
+#chevron-right-3,
+#chevron-left-1 {
+  -webkit-transform: scale(0.5);
+  -ms-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  -o-transform: scale(0.5);
+  transform: scale(0.5);
+  opacity: 0;
 }
 
-#chevron-right-3, #chevron-left-3 {
-	-webkit-transform: translateX(8px);
-	-ms-transform: translateX(8px);
-	-moz-transform: translateX(8px);
-	-o-transform: translateX(8px);
-	transform: translateX(8px);
+#chevron-right-3,
+#chevron-left-3 {
+  -webkit-transform: translateX(8px);
+  -ms-transform: translateX(8px);
+  -moz-transform: translateX(8px);
+  -o-transform: translateX(8px);
+  transform: translateX(8px);
 }
 
-#chevron-right-1, #chevron-left-1 {
-	-webkit-transform: translateX(-8px);
-	-ms-transform: translateX(-8px);
-	-moz-transform: translateX(-8px);
-	-o-transform: translateX(-8px);
-	transform: translateX(-8px);
+#chevron-right-1,
+#chevron-left-1 {
+  -webkit-transform: translateX(-8px);
+  -ms-transform: translateX(-8px);
+  -moz-transform: translateX(-8px);
+  -o-transform: translateX(-8px);
+  transform: translateX(-8px);
 }
 
-#chevron-right-2, #chevron-left-2 {
-	opacity: 0.5;
+#chevron-right-2,
+#chevron-left-2 {
+  opacity: 0.5;
 }
 
-#chevron-right-1, #chevron-left-3 {
-	opacity: 1;
+#chevron-right-1,
+#chevron-left-3 {
+  opacity: 1;
 }
 
 #scroll-next:hover #chevron-right-3 {
-	-webkit-transform: translateX(46px) scale(1);
-	-ms-transform: translateX(46px) scale(1);
-	-moz-transform: translateX(46px) scale(1);
-	-o-transform: translateX(46px) scale(1);
-	transform: translateX(46px) scale(1);
-	opacity: 0.5;
+  -webkit-transform: translateX(46px) scale(1);
+  -ms-transform: translateX(46px) scale(1);
+  -moz-transform: translateX(46px) scale(1);
+  -o-transform: translateX(46px) scale(1);
+  transform: translateX(46px) scale(1);
+  opacity: 0.5;
 }
 
 #scroll-next:hover #chevron-right-2 {
-	-webkit-transform: translateX(30px);
-	-ms-transform: translateX(30px);
-	-moz-transform: translateX(30px);
-	-o-transform: translateX(30px);
-	transform: translateX(30px);
-	opacity: 0;
+  -webkit-transform: translateX(30px);
+  -ms-transform: translateX(30px);
+  -moz-transform: translateX(30px);
+  -o-transform: translateX(30px);
+  transform: translateX(30px);
+  opacity: 0;
 }
 
 #scroll-next:hover #chevron-right-1 {
-	-webkit-transform: translateX(8px);
-	-ms-transform: translateX(8px);
-	-moz-transform: translateX(8px);
-	-o-transform: translateX(8px);
-	transform: translateX(8px);
+  -webkit-transform: translateX(8px);
+  -ms-transform: translateX(8px);
+  -moz-transform: translateX(8px);
+  -o-transform: translateX(8px);
+  transform: translateX(8px);
 }
 
 #scroll-prev:hover #chevron-left-1 {
-	-webkit-transform: translateX(-46px) scale(1);
-	-ms-transform: translateX(-46px) scale(1);
-	-moz-transform: translateX(-46px) scale(1);
-	-o-transform: translateX(-46px) scale(1);
-	transform: translateX(-46px) scale(1);
-	opacity: 0.5;
+  -webkit-transform: translateX(-46px) scale(1);
+  -ms-transform: translateX(-46px) scale(1);
+  -moz-transform: translateX(-46px) scale(1);
+  -o-transform: translateX(-46px) scale(1);
+  transform: translateX(-46px) scale(1);
+  opacity: 0.5;
 }
 
 #scroll-prev:hover #chevron-left-2 {
-	-webkit-transform: translateX(-30px);
-	-ms-transform: translateX(-30px);
-	-moz-transform: translateX(-30px);
-	-o-transform: translateX(-30px);
-	transform: translateX(-30px);
-	opacity: 0;
+  -webkit-transform: translateX(-30px);
+  -ms-transform: translateX(-30px);
+  -moz-transform: translateX(-30px);
+  -o-transform: translateX(-30px);
+  transform: translateX(-30px);
+  opacity: 0;
 }
 
 #scroll-prev:hover #chevron-left-3 {
-	-webkit-transform: translateX(-8px);
-	-ms-transform: translateX(-8px);
-	-moz-transform: translateX(-8px);
-	-o-transform: translateX(-8px);
-	transform: translateX(-8px);
+  -webkit-transform: translateX(-8px);
+  -ms-transform: translateX(-8px);
+  -moz-transform: translateX(-8px);
+  -o-transform: translateX(-8px);
+  transform: translateX(-8px);
 }
