--- a/css/cv.css
+++ b/css/cv.css
@@ -182,7 +182,7 @@
   height: 25px;
   right: 67.5px;
   background-color: white;
-  border: 3px solid black;
+  border: 3px solid #1a1a1a;
   top: 9px;
   border-radius: 50%;
   z-index: 1;
