--- a/css/contact.css
+++ b/css/contact.css
@@ -61,6 +61,7 @@ input[type="submit"] {
   border-radius: 5px;
   border: 1px solid #1a1a1a;
   background-color: var(--accent-colour);
+  color: #1a1a1a;
   font-weight: 500;
   white-space: normal;
   text-transform: uppercase;
