--- a/css/core.css
+++ b/css/core.css
@@ -176,9 +176,21 @@ i {
 }
 
 @media screen and (max-width: 500px) {
-  /* Hamburger menu */
   h1 {
-    font-size: 70px;
+    font-size: 60px;
+  }
+
+  #menu {
+    justify-content: center;
+  }
+
+  .menu-text {
+    font-size: 18px;
+    padding: 3vh 0.8vw;
+  }
+
+  #scroll-down {
+    display: none;
   }
 }
 
